2007-8-9  Fernando Perez  <fperez@planck.colorado.edu>

        * IPython/ipapi.py (to_user_ns): update to accept a dict as well as
          a string with names.

2007-08-09  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (magic_doctest_mode): added new %doctest_mode
	magic to toggle on/off the doctest pasting support without having
	to leave a session to switch to a separate profile.

2007-08-08  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Extensions/ipy_profile_doctest.py (main): fix prompt to
	introduce a blank line between inputs, to conform to doctest
	requirements.

	* IPython/OInspect.py (Inspector.pinfo): fix another part where
	auto-generated docstrings for new-style classes were showing up.

2007-08-07  Fernando Perez  <Fernando.Perez@colorado.edu>

	* api_changes: Add new file to track backward-incompatible
	user-visible changes.

2007-08-06  Ville Vainio  <vivainio@gmail.com>

	* ipmaker.py: fix bug where user_config_ns didn't exist at all
	before all the config files were handled.

2007-08-04  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/irunner.py (RunnerFactory): Add new factory class for
	creating reusable runners based on filenames.

	* IPython/Extensions/ipy_profile_doctest.py: New profile for
	doctest support.  It sets prompts/exceptions as similar to
	standard Python as possible, so that ipython sessions in this
	profile can be easily pasted as doctests with minimal
	modifications.  It also enables pasting of doctests from external
	sources (even if they have leading whitespace), so that you can
	rerun doctests from existing sources.

	* IPython/iplib.py (_prefilter): fix a buglet where after entering
	some whitespace, the prompt would become a continuation prompt
	with no way of exiting it other than Ctrl-C.  This fix brings us
	into conformity with how the default python prompt works.

	* IPython/Extensions/InterpreterPasteInput.py (prefilter_paste):